@@ -12,6 +12,7 @@
 - correct return status from do_mkdir.
 - fix localhost replicated mounts not working.
 - add "condrestart" to RedHat init script.
+- add "@network" and .domain.name export check.
 
 4/1/2007 autofs-5.0.1 rc3
 -------------------------
